--- a/prover.config
+++ b/prover.config
@@ -1,6 +1,6 @@
 {
-    "entry-contract": "QUINT",
-    "generic-detector": true,
+    "entry-contract": "Bank",
+    "generic-detector": false,
     "reentrancy-prove": false,
     "symblic-paths": false,
     "exec-parameters": {
